; ModuleID = '/home/carl/AnghaBench/reactos/dll/cpl/sysdm/extr_smbios.c_TrimNonPrintable.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/cpl/sysdm/extr_smbios.c_TrimNonPrintable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @TrimNonPrintable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @TrimNonPrintable(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  store i32* %5, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %10, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @FALSE, align 4
  store i32 %9, i32* %2, align 4
  br label %32

10:                                               ; preds = %1
  br label %11

11:                                               ; preds = %29, %10
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %30

15:                                               ; preds = %11
  %16 = load i32*, i32** %4, align 8
  %17 = load i32, i32* %16, align 4
  %18 = icmp sge i32 %17, 32
  br i1 %18, label %19, label %26

19:                                               ; preds = %15
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* %20, align 4
  %22 = icmp sle i32 %21, 126
  br i1 %22, label %23, label %26

23:                                               ; preds = %19
  %24 = load i32*, i32** %4, align 8
  %25 = getelementptr inbounds i32, i32* %24, i32 1
  store i32* %25, i32** %4, align 8
  br label %29

26:                                               ; preds = %19, %15
  %27 = load i32*, i32** %4, align 8
  store i32 0, i32* %27, align 4
  %28 = load i32, i32* @TRUE, align 4
  store i32 %28, i32* %2, align 4
  br label %32

29:                                               ; preds = %23
  br label %11

30:                                               ; preds = %11
  %31 = load i32, i32* @FALSE, align 4
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %30, %26, %8
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
